--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Astro Motion by TemplateMo</title>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/25d35d8c20.js" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/slick.css" type="text/css" />
     <link rel="stylesheet" href="css/templatemo-style.css">
@@ -66,7 +67,7 @@ https://templatemo.com/tm-560-astro-motion
                         <div class="d-flex position-relative  intro-container">
                             <div class="intro-left tm-bg-dark">
                                 <h2 class="mb-4">Dita Mukane</h2>
-                                <p class="mb-4"> Hi, im a junior Web deweloper, who lives in Vienna. <br> I'm an art teacher after profession who has found a new passion in coding. I am in learning process and are descovering exciting world of Web Dewelopment. <br><br>                                    I like to pay attencion to details and to create something new from nothing. In my previous work as an Vice principal, I have learnd organization, work in teams, creativity and improvisation. <br><br> I would like to
+                                <p class="mb-4"> Hi, im a junior Web Developer, who lives in Vienna. <br> I'm an art teacher after profession who has found a new passion in coding. I am in learning process and are descovering exciting world of Web Development. <br><br>                                    I like to pay attencion to details and to create something new from nothing. In my previous work as an Vice principal, I have learnd organization, work in teams, creativity and improvisation. <br><br> I would like to
                                     join your team, learn from it and maybe bring something.
                                 </p>
                             </div>
@@ -87,12 +88,9 @@ https://templatemo.com/tm-560-astro-motion
                 </li>
                 <li data-page-no="2">
                     <!-- Image Carousel -->
-                    <div class="mx-auto position-relative gallery-container">
-                        <!-- <div class="circle intro-circle-1"></div>
-                        <div class="circle intro-circle-2"></div> -->
-                        <div class="mx-auto  gallery-slider">
+                    <!-- <div class="mx-auto position-relative gallery-container"> -->
+                    <!--<div class="mx-auto  gallery-slider">
                             <div>
-
                                 <figure class="effect-julia item">
                                     <img src="img/cr1.png" alt="Image">
                                     <figcaption>
@@ -149,7 +147,61 @@ https://templatemo.com/tm-560-astro-motion
                                 <a class="icon" href="https://github.com/MukaneDita/Team-8-Project-C"><i class="fa-brands fa-github"></i></a>
                             </div>
                         </div>
-                    </div>
+                     -->
+                    <section class="cr-container ">
+                        <input id="select-img-1" name="radio-set-1" type="radio" class="cr-selector-img-1" checked/>
+                        <label for="select-img-1" class="cr-label-img-1">1</label>
+
+                        <input id="select-img-2" name="radio-set-1" type="radio" class="cr-selector-img-2" />
+                        <label for="select-img-2" class="cr-label-img-2">2</label>
+
+                        <input id="select-img-3" name="radio-set-1" type="radio" class="cr-selector-img-3" />
+                        <label for="select-img-3" class="cr-label-img-3">3</label>
+
+                        <input id="select-img-4" name="radio-set-1" type="radio" class="cr-selector-img-4" />
+                        <label for="select-img-4" class="cr-label-img-4">4</label>
+
+                        <div class="clr"></div>
+                        <div class="cr-bgimg">
+                            <div>
+                                <span>Slice 1 - Image 1</span>
+                                <span>Slice 1 - Image 2</span>
+                                <span>Slice 1 - Image 3</span>
+                                <span>Slice 1 - Image 4</span>
+                            </div>
+                            <div>
+                                <span>Slice 2 - Image 1</span>
+                                <span>Slice 2 - Image 2</span>
+                                <span>Slice 2 - Image 3</span>
+                                <span>Slice 2 - Image 4</span>
+                            </div>
+                            <div>
+                                <span>Slice 3 - Image 1</span>
+                                <span>Slice 3 - Image 2</span>
+                                <span>Slice 3 - Image 3</span>
+                                <span>Slice 3 - Image 4</span>
+                            </div>
+                            <div>
+                                <span>Slice 4 - Image 1</span>
+                                <span>Slice 4 - Image 2</span>
+                                <span>Slice 4 - Image 3</span>
+                                <span>Slice 4 - Image 4</span>
+                            </div>
+                        </div>
+                        <div class="cr-titles">
+
+                            <h3>
+                                <a href="https://mukanedita.github.io/FE18-CR1-DitaMukane/">
+                                    <span>Code Review 1 </span><span> "Food Blog"</span></a>
+
+                            </h3>
+                            <h3>
+                                <a href="https://mukanedita.github.io/FE18-CR2-DitaMukane/#"><span>Code Review 2</span><span>"Weekly Planer"</span></a></h3>
+                            <h3><a href="https://mukanedita.github.io/dita-mukane-dist/"><span>Code Review 3</span><span>"Italian Restaurant"</span></a></h3>
+                            <h3><a href="https://mukanedita.github.io/team-8-project-c-DitaMukane/"><span>Team Project </span><span>"Photo Studio" <br>Team: Oksana, Arnaldo, Thomas, Priyanka</span></a></h3>
+                        </div>
+                    </section>
+                    <!-- </div> -->
                 </li>
                 <li data-page-no="3" class="px-3">
                     <div class="position-relative page-width-1 page-right ">
@@ -224,7 +276,7 @@ https://templatemo.com/tm-560-astro-motion
                             </div>
                             <div class="col-md-6 tm-contact-right">
                                 <p class="mb-4">
-                                    You can reach me on my Phone or with writting e-mail. <br> I will be happy to hear from You.
+                                    You can reach me on my Phone or with writing e-mail. <br> I will be happy to hear from You.
                                 </p>
                                 <div>
                                     Email: <a href="mailto:info@company.com" class="tm-link-white">dita.mukane@gmail.com</a>
@@ -261,6 +313,8 @@ https://templatemo.com/tm-560-astro-motion
     <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <!-- stats.js lib -->
     <script src="http://threejs.org/examples/js/libs/stats.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js'></script>
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/slick.js"></script>
